// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductDescription /> should not render if no data is available 1`] = `
<Description
  html={null}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="css-1mfzgeo"
  >
    <div
      className="css-10lhp8m"
    >
      <Translate
        className=""
        params={Object {}}
        string="product.description_heading"
      >
        <span
          className=""
        >
          product.description_heading
        </span>
      </Translate>
    </div>
    <PlaceholderParagraph
      className="css-1k8v9u5"
      lines={3}
      ready={false}
    >
      <div>
        <PlaceholderLabel
          className="css-1k8v9u5"
          key="0"
          ready={false}
          style={
            Object {
              "width": "95%",
            }
          }
        >
          <div
            className="css-qd8qpa css-1k8v9u5"
            style={
              Object {
                "width": "95%",
              }
            }
          />
        </PlaceholderLabel>
        <PlaceholderLabel
          className="css-1k8v9u5"
          key="1"
          ready={false}
          style={null}
        >
          <div
            className="css-qd8qpa css-1k8v9u5"
            style={null}
          />
        </PlaceholderLabel>
        <PlaceholderLabel
          className="css-1k8v9u5"
          key="2"
          ready={false}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className="css-qd8qpa css-1k8v9u5"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </PlaceholderLabel>
      </div>
    </PlaceholderParagraph>
  </div>
</Description>
`;

exports[`<ProductDescription /> should render description if data is available 1`] = `
<Description
  html="<h1>foo</h1>"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="css-1mfzgeo"
  >
    <div
      className="css-10lhp8m"
    >
      <Translate
        className=""
        params={Object {}}
        string="product.description_heading"
      >
        <span
          className=""
        >
          product.description_heading
        </span>
      </Translate>
    </div>
    <PlaceholderParagraph
      className="css-1k8v9u5"
      lines={3}
      ready={true}
    >
      <div
        className="css-18q71ft"
      >
        <HtmlSanitizer
          decode={false}
          settings={
            Object {
              "html": "<h1>foo</h1>",
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<h1>foo</h1>",
              }
            }
          />
        </HtmlSanitizer>
      </div>
    </PlaceholderParagraph>
  </div>
</Description>
`;
